Alterações, correções e afins.
Adicionado suporte (em ambiente de desenvolvimento) para SCSS (ou SASS);
Mudança de EJS para Pug;
Adição de dependências;
Criação de arquivos;
Mudanças gerais na configuração;
Mudanças gerais estruturais;
Atualização do readme.

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,25 +1,1 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  border-top: solid 4px #39c;
-  font-size: 17px;
-  padding: 20px;
-  font-family: "Segoe UI", sans-serif;
-  line-height: 1.5;
-  color: #212121;
-}
-
-button {
-  margin-top: 15px;
-  background-color: #39c;
-  border: none;
-  border-radius: 3px;
-  color: #fff;
-  padding: 10px 16px;
-}
+*,*::before,*::after{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box}body{border-top:solid 4px #39c;font-size:17px;padding:20px;font-family:"Segoe UI", sans-serif;line-height:1.5;color:#212121}h1{color:#39c;font-size:35px;margin:0;font-weight:600;margin-bottom:5px}a{color:#39c;text-decoration:none}a:hover{text-decoration:underline}form{margin-top:25px;margin-bottom:25px}.alert{color:#ff0000;margin-bottom:25px}.alert::before{content:"Error";color:#fff;text-transform:uppercase;font-size:16px;background-color:#ff0000;padding:1px 6px;border-radius:2px;margin-right:5px}input:not([type="submit"]){border:solid 1px #ddd;padding:10px 12px;font-size:17px}input[type="submit"]{border:none;padding:10px 12px;font-size:17px;color:#fff;background-color:#39c;border:solid 1px #39c;cursor:pointer}input:focus{outline:0;border-color:#39c}
